First Draft of 'Get Inspired' Feature 4.2.2

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 			<dt>Asker</dt>
 				<dd class="asker"></dd>
 		</dl>
+		<div class="result answerer">
+			<div class="profile-pic"></div>
+			<dl class="answerer-info">
+				<dt>Reputation</dt>
+					<dd class="answerer-reputation"></dd>
+				<dt>Posts</dt>
+					<dd class="num-posts"></dd>
+				<dt>Score</dt>
+					<dd class="score"></dd>
+			</dl>
+		</div>
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
